--- a/package.json
+++ b/package.json
@@ -1,9 +1,9 @@
 {
   "name": "@digital-boss/n8n-nodes-suitecrm",
-  "version": "1.1.2",
+  "version": "1.0.1",
   "author": "Iñaki Breinbauer",
   "license": "GPL-3.0",
-  "description": "SuiteCrm v8 support for n8n",
+  "description": "suiteCrm support for n8n",
   "keywords": [
     "n8n",
     "nodemation",
