--- a/package.json
+++ b/package.json
@@ -42,22 +42,21 @@
     ]
   },
   "devDependencies": {
+    "@types/express": "^4.17.2",
     "@types/jest": "^27.0.1",
     "@types/node": "^16.9.1",
-    "@types/express": "^4.17.2",
     "@types/request": "^2.48.3",
     "@types/request-promise-native": "^1.0.17",
     "gulp": "^4.0.0",
-    "jest": "^27.1.1",
-    "n8n-workflow": "^0.71.0",
-    "ts-jest": "^27.0.5",
+    "jest": "^29.7.0",
+    "n8n-workflow": "*",
+    "ts-jest": "^29.3.2",
     "tslint": "^6.1.3",
     "typescript": "~5.4.0"
   },
   "dependencies": {
     "@types/request": "^2.48.3",
-    "@types/request-promise-native": "^1.0.17",
-    "n8n-core": "^0.87.0"
+    "@types/request-promise-native": "^1.0.17"
   },
   "jest": {
     "transform": {
