--- a/package.json
+++ b/package.json
@@ -42,21 +42,25 @@
     ]
   },
   "devDependencies": {
-    "@types/express": "^4.17.2",
-    "@types/jest": "^27.0.1",
-    "@types/node": "^16.9.1",
-    "@types/request": "^2.48.3",
-    "@types/request-promise-native": "^1.0.17",
-    "gulp": "^4.0.0",
+    "@langchain/core": "^0.3.45",
+    "@n8n_io/riot-tmpl": "^4.0.1",
+    "@sentry/node": "^9.13.0",
+    "@types/express": "^5.0.1",
+    "@types/jest": "^29.5.14",
+    "@types/luxon": "^3.6.2",
+    "@types/node": "^22.14.1",
+    "@types/request": "^2.48.12",
+    "@types/request-promise-native": "^1.0.21",
+    "gulp": "^5.0.0",
     "jest": "^29.7.0",
-    "n8n-workflow": "*",
+    "n8n-workflow": "1.82.0",
     "ts-jest": "^29.3.2",
     "tslint": "^6.1.3",
-    "typescript": "~5.4.0"
+    "typescript": "^5.8.3"
   },
   "dependencies": {
-    "@types/request": "^2.48.3",
-    "@types/request-promise-native": "^1.0.17"
+    "@types/request": "^2.48.12",
+    "@types/request-promise-native": "^1.0.21"
   },
   "jest": {
     "transform": {
