--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,22 +1,23 @@
 {
 	"compilerOptions": {
-		"lib": [
-			"es2017"
-		],
-		"types": [
-			"node",
-			"jest"
-		],
+        "target": "es2019",
+        "lib": ["es2019", "es2020", "es2022.error"],
 		"module": "commonjs",
-		"noImplicitAny": true,
-		"removeComments": true,
-		"strictNullChecks": true,
-		"strict": true,
-		"preserveConstEnums": true,
-		"declaration": true,
+        "removeComments": true,
+        "useUnknownInCatchVariables": false,
+        "forceConsistentCasingInFileNames": true,
+        "noImplicitAny": true,
+        "noImplicitReturns": true,
+        "noUnusedLocals": true,
+        "strictNullChecks": true,
+        "preserveConstEnums": true,
+        "esModuleInterop": true,
+        "resolveJsonModule": true,
+        "incremental": true,
+        "declaration": true,
+        "skipLibCheck": true,
 		"outDir": "./dist/",
 		"rootDir": "./",
-		"target": "es2017",
 		"sourceMap": true
 	},
 	"include": [
